--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -25,8 +25,8 @@ parameters:
 
     facebook_app_id: '476946822391252'
     facebook_app_secret: '10af83878f15f4963c5a0a22fdc0e28b'
-    twitter_client_id: 'VNgnUYWcvjnmLiVHzYNEg'
-    twitter_client_secret: 'RF4WbIdC86hRMLQHj8OIRHDx5nApXRKhj5B4Ah5Rg'
+    twitter_consumer_key: 'VNgnUYWcvjnmLiVHzYNEg'
+    twitter_consumer_secret: 'RF4WbIdC86hRMLQHj8OIRHDx5nApXRKhj5B4Ah5Rg'
     twitter_access_token: '99203298-jKDPmWmMtGSAzgEnH754yvc10t8MFAxPiavf7VOYo'
     twitter_access_token_secret: 'fWhvviE1LmeSNOV4Zt6BBQDyCHL0Dwkog1U1ludcNc'
 
