--- a/app/config/oauth.yml
+++ b/app/config/oauth.yml
@@ -12,8 +12,8 @@ hwi_oauth:
                 profilepicture: picture.data.url
         twitter:
             type: twitter
-            client_id: %twitter_client_id%
-            client_secret: %twitter_client_secret%
+            client_id: %twitter_consumer_key%
+            client_secret: %twitter_consumer_secret%
             paths:
                 profilepicture: profile_image_url
     fosub:
