--- a/src/Adstacy/OAuthBundle/Resources/config/services.yml
+++ b/src/Adstacy/OAuthBundle/Resources/config/services.yml
@@ -12,8 +12,8 @@ services:
             - 
                 oauth_access_token: %twitter_access_token%
                 oauth_access_token_secret: %twitter_access_token_secret%
-                consumer_key: %twitter_client_id%
-                consumer_secret: %twitter_client_secret%
+                consumer_key: %twitter_consumer_key%
+                consumer_secret: %twitter_consumer_secret%
 
     adstacy.oauth.facebook_api:
         class: Adstacy\OAuthBundle\API\FacebookAPI
