--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,12 @@
     "autoload": {
         "psr-0": { "": "src/" }
     },
+    "repositories": [
+       {
+         "type": "vcs",
+         "url": "https://github.com/wlzch/FOSElasticaBundle.git"
+       }
+    ],
     "require": {
         "php": ">=5.3.3",
         "symfony/symfony": "2.3.5",
