--- a/src/Adstacy/AppBundle/Resources/config/routing.yml
+++ b/src/Adstacy/AppBundle/Resources/config/routing.yml
@@ -37,6 +37,13 @@ adstacy_app_tags:
     defaults:
         _controller: AdstacyAppBundle:App:tags
 
+adstacy_app_favtags_add:
+    path: /favtags/add
+    defaults:
+        _controller: AdstacyAppBundle:User:addFavouriteTags
+    options:
+        expose: true
+
 adstacy_app_contact:
     path: /contact-us
     defaults:
