Add api for user show.

--- a/src/Adstacy/AppBundle/Resources/config/services.yml
+++ b/src/Adstacy/AppBundle/Resources/config/services.yml
@@ -3,6 +3,7 @@ imports:
   - { resource: twig.yml }
   - { resource: admin.yml }
   - { resource: listener.yml }
+  - { resource: subscriber.yml }
 
 services:
     adstacy.user.provider:
