--- a/src/Adstacy/AppBundle/Resources/config/routing/api.yml
+++ b/src/Adstacy/AppBundle/Resources/config/routing/api.yml
@@ -18,3 +18,38 @@ adstacy_app_api_tags:
         _controller: AdstacyAppBundle:Api:tags
     options:
       expose: true
+
+adstacy_app_api_user_show:
+    path: /users/{username}
+    defaults:
+        _controller: AdstacyAppBundle:Api:showUser
+    options:
+        expose: true
+
+adstacy_app_api_user_ads:
+    path: /users/{username}/ads
+    defaults:
+        _controller: AdstacyAppBundle:Api:listAds
+    options:
+        expose: true
+
+adstacy_app_api_user_followers:
+    path: /users/{username}/followers
+    defaults:
+        _controller: AdstacyAppBundle:Api:listFollowers
+    options:
+        expose: true
+
+adstacy_app_api_user_followings:
+    path: /users/{username}/followings
+    defaults:
+        _controller: AdstacyAppBundle:Api:listFollowings
+    options:
+        expose: true
+
+adstacy_app_api_user_promotes:
+    path: /users/{username}/promotes
+    defaults:
+        _controller: AdstacyAppBundle:Api:listPromotes
+    options:
+        expose: true
