--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -10,6 +10,7 @@ parameters:
     elfinder.loader: Adstacy\AppBundle\Loader\FMElfinderLoader
     max_ads_per_page: 10
     max_users_per_page: 10
+    max_comments_per_page: 10
     max_notifications: 50
     max_who_to_follow: 10
 
