--- a/src/Adstacy/AppBundle/Resources/config/routing/api.yml
+++ b/src/Adstacy/AppBundle/Resources/config/routing/api.yml
@@ -58,5 +58,16 @@ adstacy_app_api_ad_show:
     path: /ads/{id}
     defaults:
         _controller: AdstacyAppBundle:Api:showAd
+    requirements:
+        id: \d+
+    options:
+        expose: true
+
+adstacy_app_api_ad_comments:
+    path: /ads/{id}/comments
+    defaults:
+        _controller: AdstacyAppBundle:Api:listAdComments
+    requirements:
+        id: \d+
     options:
         expose: true
