--- a/app/config/liip_imagine.yml
+++ b/app/config/liip_imagine.yml
@@ -3,7 +3,7 @@ liip_imagine:
         thumbnail:
             quality: 90
             filters:
-                relative_resize: { widen: 480 }
+                relative_resize: { widen: %thumb_width% }
         mini_thumb:
             quality: 50
             filters:
