--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,8 @@
         "snc/redis-bundle": "1.1.*",
         "predis/predis": "0.8.*",
         "facebook/php-sdk": "3.2.*",
-        "j7mbo/twitter-api-php": "dev-master"
+        "j7mbo/twitter-api-php": "dev-master",
+        "funddy/jstranslations-bundle": "2.0.*"
     },
     "scripts": {
         "post-install-cmd": [
