--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -13,6 +13,7 @@ parameters:
     max_comments_per_page: 10
     max_notifications: 50
     max_who_to_follow: 10
+    max_sidebar_recommendation: 3
 
     small_thumb_size: 250
     thumb_width: 498
