--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -11,6 +11,7 @@ parameters:
     max_ads_per_page: 10
     max_users_per_page: 10
     max_comments_per_page: 10
+    max_list_broadcasts_per_page: 10
     max_notifications: 50
     max_who_to_follow: 10
     max_sidebar_recommendation: 3
