--- a/src/Adstacy/ApiBundle/Resources/config/subscriber.yml
+++ b/src/Adstacy/ApiBundle/Resources/config/subscriber.yml
@@ -4,3 +4,9 @@ services:
         arguments: [@service_container]
         tags:
             - { name: jms_serializer.event_subscriber, event: serializer.post_serialize, method: onPostSerialize } 
+
+    adstacy.subscriber.user_has_follow:
+        class: Adstacy\ApiBundle\EventSubscriber\UserHasFollowSubscriber
+        arguments: [@service_container]
+        tags:
+            - { name: jms_serializer.event_subscriber, event: serializer.post_serialize, method: onPostSerialize } 
