--- a/src/Adstacy/AppBundle/Resources/config/routing/ads.yml
+++ b/src/Adstacy/AppBundle/Resources/config/routing/ads.yml
@@ -23,6 +23,9 @@ adstacy_app_ad_promote:
         _controller: AdstacyAppBundle:Ad:promote
     requirements:
         id: \d+
+    methods: [POST]
+    options:
+        expose: true
 
 adstacy_app_ad_unpromote:
     path: /ads/{id}/unpromote
@@ -30,6 +33,9 @@ adstacy_app_ad_unpromote:
         _controller: AdstacyAppBundle:Ad:unpromote
     requirements:
         id: \d+
+    methods: [POST]
+    options:
+        expose: true
 
 adstacy_app_ad_comment:
     path: /ads/{id}/comment
