--- a/src/Adstacy/AppBundle/Resources/config/routing/ads.yml
+++ b/src/Adstacy/AppBundle/Resources/config/routing/ads.yml
@@ -51,6 +51,7 @@ adstacy_app_ad_comment_delete:
         _controller: AdstacyAppBundle:Ad:deleteComment
     requirements:
         id: \d+
+    methods: [POST]
 
 adstacy_app_ad_edit:
     path: /ads/{id}/edit
