Add trending sidebar ajax.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -15,6 +15,7 @@ parameters:
     max_notifications: 50
     max_who_to_follow: 10
     max_sidebar_recommendation: 3
+    max_sidebar_trending: 3
 
     small_thumb_size: 260
     thumb_width: 498
