--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -25,6 +25,7 @@ security:
                 failure_path: /login
                 oauth_user_provider:
                     service: adstacy.user.provider
+                success_handler: adstacy.user.login_success_handler
             form_login:
                 provider: fos_userbundle
                 success_handler: adstacy.user.login_success_handler
