--- a/app/config/elasticsearch.yml
+++ b/app/config/elasticsearch.yml
@@ -2,7 +2,7 @@ parameters:
     elastica_website_types:
         ad:
             mappings:
-                tags: { boost: 1.5, index: not_analyzed, analyzer: tags_analyzer }
+                normalizedTags: { boost: 1.5, index: not_analyzed, analyzer: tags_analyzer }
                 created: { type: date, index: not_analyzed }
                 active: ~
             persistence:
